force-app/main/default/objects/PartnerPortalSettings__c/PartnerPortalSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>PartnerPortalSettings</label>
</CustomObject>