force-app/main/default/objects/PartnerPortalSettings__c/fields/AccountRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>AccountRecordTypeId__c</fullName>
    <label>AccountRecordTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>