force-app/main/default/objects/PartnerPortalSettings__c/fields/ContactRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>ContactRecordTypeId__c</fullName>
    <label>ContactRecordTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>