force-app/main/default/objects/PartnerPortalSettings__c/fields/LeadRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>LeadRecordTypeId__c</fullName>
    <label>LeadRecordTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>