force-app/main/default/objects/PartnerPortalSettings__c/fields/OpportunityRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityRecordTypeId__c</fullName>
    <label>OpportunityRecordTypeId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>