force-app/main/default/objects/PartnerPortalSettings__c/fields/PortalServiceTimeout__c.field-meta.xml
<CustomField>
    <fullName>PortalServiceTimeout__c</fullName>
    <label>PortalServiceTimeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>