force-app/main/default/objects/PartnerPortalSettings__c/fields/PortalServiceToken__c.field-meta.xml
<CustomField>
    <fullName>PortalServiceToken__c</fullName>
    <label>PortalServiceToken</label>
    <length>100</length>
    <type>Text</type>
</CustomField>