force-app/main/default/objects/PartnerPortalSettings__c/fields/PortalServiceUrl__c.field-meta.xml
<CustomField>
    <fullName>PortalServiceUrl__c</fullName>
    <label>PortalServiceUrl</label>
    <type>Url</type>
</CustomField>