force-app/main/default/objects/PartnerPortalSettings__c/fields/PortalServiceUser__c.field-meta.xml
<CustomField>
    <fullName>PortalServiceUser__c</fullName>
    <label>PortalServiceUser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>