force-app/main/default/objects/PartnerPortalSettings__c/fields/SalesforceAPIUserId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceAPIUserId__c</fullName>
    <label>SalesforceAPIUserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>